# xn

./: .gitignore  Cargo.toml  README.md
moshi/examples/: moshi.rs
moshi/src/: conv.rs  mimi.rs  quantization.rs  seanet.rs  streaming.rs  transformer.rs
pocket-tts/: Cargo.toml
pocket-tts/examples/: pocket_tts.rs
pocket-tts/src/: conditioners.rs  conv.rs  flow_lm.rs  lib.rs  mimi.rs  mimi_transformer.rs  seanet.rs  transformer.rs  tts_model.rs
wasm-pocket-tts/: Cargo.toml  Makefile  README.md
wasm-pocket-tts/src/: dequantize.rs  lib.rs
wasm-pocket-tts/www/: decode_worker.js  gen_worker.js  index.html  worker.js
xn-core/: Cargo.toml  build.rs
xn-core/cuda-kernels/: arithmetic.cu  broadcast.cu  conv.cu  indexing.cu  layout.cu  reduce.cu  rope.cu
xn-core/examples/: basic_cuda.rs  cpu_benchmarks.rs
xn-core/src/: backend.rs  cpu_backend.rs  cuda_backend.rs  cuda_kernels.rs  dtype.rs  error.rs  inplace_ops.rs  lib.rs  ops.rs  safetensors.rs  shape.rs  tensor.rs  tensor_view.rs  utils.rs
xn-core/src/models/: demucs.rs  kv_cache.rs  llama.rs  mimi.rs
xn-core/src/nn/: linear.rs  mod.rs  norm.rs  var_builder.rs
xn-core/tests/: cuda_tests.rs  tensor_tests.rs
xn-moshi/: Cargo.toml
xn-moshi/examples/: moshi.rs
xn-moshi/src/: asr.rs  batched_transformer.rs  conv.rs  lib.rs  lm.rs  mimi.rs  quantization.rs  streaming.rs  transformer.rs
xn-pocket-tts/src/: conditioners.rs  flow_lm.rs  lib.rs  mimi_transformer.rs  mlp.rs  resample.rs  rope.rs  transformer.rs
