[package]
name = "wasm-pocket-tts"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pocket_tts = { path = "../pocket-tts", default-features = false }
xn = { path = "../xn-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
rand = { version = "0.9", default-features = false, features = ["std_rng"] }
rand_distr = "0.5"
gemm = { version = "0.19.0", features = ["wasm-simd128-enable"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false
