[package]
name = "xn-moshi"
version = "0.1.0"
edition = "2024"

[dependencies]
xn = { path = "../xn-core" }
tracing = "0.1.44"
kaudio = { version = "0.2.1", optional = true }

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hf-hub = "0.4"
tracing-chrome = "0.7"
tracing-subscriber = "0.3"

[features]
default = []
cuda = ["xn/cuda"]
audio = ["dep:kaudio"]

[[example]]
name = "moshi"
required-features = ["audio"]
